@@ -127,6 +127,7 @@ production.
 * prop=info now adds the content model of the title.
 * New upload log entries will now contain information on the relavent
   image (sha1 and timestamp).
+* The new query module list=allfileusages to enumerate file usages was added.
 
 === Languages updated in 1.22===
 
